<project>
  <parent>
    <groupId>io.teknek.deliverance</groupId>
    <artifactId>deliverance-parent</artifactId>
    <version>0.0.4-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>skeches</artifactId>
  <name>sketches</name>
  <properties>

    <maven.compiler.source>24</maven.compiler.source>
    <maven.compiler.target>24</maven.compiler.target>
    <maven.compiler.release>24</maven.compiler.release>
    <build.plugins.plugin.version>3.5.3</build.plugins.plugin.version>
    <guava.version>32.0.1-jre</guava.version>
    <jackson.version>2.15.2</jackson.version>
    <slf-simple.version>2.0.17</slf-simple.version>
    <slf4j-api.version>2.0.17</slf4j-api.version>
  </properties>


  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j-api.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>net.serenity-bdd</groupId>
      <artifactId>serenity-junit5</artifactId>
      <version>${serenity.base.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf-simple.version}</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>25</release>
          <jdkToolchain>
            <version>25</version>
          </jdkToolchain>
          <compilerArgs>
            <arg>--add-modules</arg>
            <arg>jdk.incubator.vector</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire.version}</version>
        <configuration>
          <argLine>
            --add-modules jdk.incubator.vector
            -Djdk.attach.allowAttachSelf=true
          </argLine>
        </configuration>
      </plugin>
      <plugin>
       <groupId>net.serenity-bdd.maven.plugins</groupId>
       <artifactId>serenity-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>  
